--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -81,7 +81,7 @@
   <a href="https://snapchat.com/add/{{.}}" aria-label="Snapchat" target="_blank"><i class="fab fa-snapchat" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.youtube}}
-  <a href="https://youtube.com/c/{{.}}" aria-label="Youtube" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+  <a href="https://youtube.com/channel/{{.}}" aria-label="Youtube" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.keybase}}
   <a href="https://keybase.io/{{.}}" aria-label="Keybase" target="_blank"><i class="fab fa-keybase" aria-hidden="true"></i></a>
@@ -161,7 +161,7 @@
     {{ with .Site.Params.social.steam}}"https://steamcommunity.com/id/{{.}}",{{ end }}
     {{ with .Site.Params.social.reddit}}"https://www.reddit.com/user/{{.}}",{{ end }}
     {{ with .Site.Params.social.snapchat}}"https://snapchat.com{{.}}",{{ end }}
-    {{ with .Site.Params.social.youtube}}"https://youtube.com/user/{{.}}",{{ end }}
+    {{ with .Site.Params.social.youtube}}"https://youtube.com/channel/{{.}}",{{ end }}
     {{ with .Site.Params.social.keybase}}"https://keybase.io/{{.}}",{{ end }}
     {{ with .Site.Params.social.twitch}}"https://www.twitch.tv/{{.}}",{{ end }}
     {{ with .Site.Params.social.soundcloud}}"https://soundcloud.com/{{.}}",{{ end }}
